{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 156,
  "lineage": "579b0093-342c-d0fd-d25e-e799e5387dd4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db-elastic-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011886752ea9b6975",
            "association_id": "eipassoc-08aa3e8ccb2136f94",
            "domain": "vpc",
            "id": "eipalloc-011886752ea9b6975",
            "network_border_group": "us-east-2",
            "network_interface": "eni-073615bdc5edca976",
            "private_dns": "ip-20-0-1-192.us-east-2.compute.internal",
            "private_ip": "20.0.1.192",
            "public_dns": "ec2-3-136-138-139.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.138.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db-elastic-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041a5c401ca8dfe4c",
            "association_id": "eipassoc-053154d849fc22104",
            "domain": "vpc",
            "id": "eipalloc-041a5c401ca8dfe4c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0dcfde4394ba4fdb4",
            "private_dns": "ip-20-0-3-110.us-east-2.compute.internal",
            "private_ip": "20.0.3.110",
            "public_dns": "ec2-3-137-3-200.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.3.200",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:735117202941:instance/i-085379328b605c98c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085379328b605c98c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3ba1c679a949d4f",
            "private_dns": "ip-10-0-3-185.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.185",
            "public_ip": "13.59.78.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05458a3e0772996f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0214623b70cc0cb82",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09b620f85a8a8890e"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_security_group_rule.ingress",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:735117202941:instance/i-0cfb627039a3b1f2e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfb627039a3b1f2e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb78cad1a6ff848a",
            "private_dns": "ip-20-0-1-133.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.1.133",
            "public_ip": "3.138.61.48",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05cb8e01701da89db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032bc31cefc6038c6",
            "tags": {
              "Name": "Bastion-host"
            },
            "tags_all": {
              "Name": "Bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cde92c7f9ac2d0ab"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_instance.app1",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_security_group_rule.ingress",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:735117202941:instance/i-085df8150857e1586",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085df8150857e1586",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f3138ff26cc11cd9",
            "private_dns": "ip-20-0-2-198.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.2.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01cd3fcca5b8f7a1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-029733216631d6f42",
            "tags": {
              "Name": "mongo-1"
            },
            "tags_all": {
              "Name": "mongo-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cde92c7f9ac2d0ab"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_instance.app1",
            "aws_instance.bastion-host",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_security_group_rule.ingress",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:735117202941:instance/i-0114e054b4a853e39",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0114e054b4a853e39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-038f69c64192a5fa1",
            "private_dns": "ip-20-0-4-246.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.4.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07eef7b5fdbbeac71",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034e75251ecfce123",
            "tags": {
              "Name": "mongo-2"
            },
            "tags_all": {
              "Name": "mongo-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cde92c7f9ac2d0ab"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_instance.app1",
            "aws_instance.bastion-host",
            "aws_instance.mongo-1",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_security_group_rule.ingress",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongo-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430580de6244e02e",
            "arn": "arn:aws:ec2:us-east-2:735117202941:instance/i-0b4b6b4cf3fde42ba",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4b6b4cf3fde42ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05f80b4e4e5c0b826",
            "private_dns": "ip-20-0-5-170.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "20.0.5.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020f78dd857b83f82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d0c7ac9612a16ed",
            "tags": {
              "Name": "mongo-3"
            },
            "tags_all": {
              "Name": "mongo-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cde92c7f9ac2d0ab"
            ]
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_instance.app1",
            "aws_instance.bastion-host",
            "aws_instance.mongo-1",
            "aws_instance.mongo-2",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_security_group_rule.ingress",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "db-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:internet-gateway/igw-0862fa195286db59e",
            "id": "igw-0862fa195286db59e",
            "owner_id": "735117202941",
            "tags": {
              "Name": "db-igw"
            },
            "tags_all": {
              "Name": "db-igw"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:internet-gateway/igw-0ddfceecbfffb6b73",
            "id": "igw-0ddfceecbfffb6b73",
            "owner_id": "735117202941",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db-nat-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011886752ea9b6975",
            "association_id": "eipassoc-08aa3e8ccb2136f94",
            "connectivity_type": "public",
            "id": "nat-002d1cc2cc6f23ae9",
            "network_interface_id": "eni-073615bdc5edca976",
            "private_ip": "20.0.1.192",
            "public_ip": "3.136.138.139",
            "subnet_id": "subnet-032bc31cefc6038c6",
            "tags": {
              "Name": "dbnat-1"
            },
            "tags_all": {
              "Name": "dbnat-1"
            }
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "db-nat-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041a5c401ca8dfe4c",
            "association_id": "eipassoc-053154d849fc22104",
            "connectivity_type": "public",
            "id": "nat-04b6994e7861881a2",
            "network_interface_id": "eni-0dcfde4394ba4fdb4",
            "private_ip": "20.0.3.110",
            "public_ip": "3.137.3.200",
            "subnet_id": "subnet-0dc9172f386884e2e",
            "tags": {
              "Name": "dbnat-2"
            },
            "tags_all": {
              "Name": "dbnat-2"
            }
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_dbvpc_to_vpc_mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac889d7d70d92445179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac889d7d70d92445",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ce29ee86447310d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route.vpc_mainvpc_to_vpc_dabvpc",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc_mainvpc_to_vpc_dabvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "20.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2446c50ce2173872472047643",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2446c50ce217387",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0ce29ee86447310d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "aws_vpc_peering_connection.peering",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-0ac889d7d70d92445",
            "id": "rtb-0ac889d7d70d92445",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0862fa195286db59e",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "db-pub-rot"
            },
            "tags_all": {
              "Name": "db-pub-rot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-2",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-0eb0d5c657b05c9f0",
            "id": "rtb-0eb0d5c657b05c9f0",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-002d1cc2cc6f23ae9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-1"
            },
            "tags_all": {
              "Name": "db-pvt-rot-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-05fb06c9817287754",
            "id": "rtb-05fb06c9817287754",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04b6994e7861881a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-2"
            },
            "tags_all": {
              "Name": "db-pvt-rot-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-059e522801116d074",
            "id": "rtb-059e522801116d074",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-002d1cc2cc6f23ae9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-3"
            },
            "tags_all": {
              "Name": "db-pvt-rot-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db-pvt-route-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-008218624a7ebabe7",
            "id": "rtb-008218624a7ebabe7",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04b6994e7861881a2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "db-pvt-rot-4"
            },
            "tags_all": {
              "Name": "db-pvt-rot-4"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.db-igw",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_vpc.dbvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:route-table/rtb-0b2446c50ce217387",
            "id": "rtb-0b2446c50ce217387",
            "owner_id": "735117202941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0ddfceecbfffb6b73",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "pub-rot"
            },
            "tags_all": {
              "Name": "pub-rot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fb2fc24ccb1c8ce",
            "route_table_id": "rtb-0ac889d7d70d92445",
            "subnet_id": "subnet-032bc31cefc6038c6"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010ad16d708974092",
            "route_table_id": "rtb-0ac889d7d70d92445",
            "subnet_id": "subnet-0dc9172f386884e2e"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040c10c620f3d1696",
            "route_table_id": "rtb-0eb0d5c657b05c9f0",
            "subnet_id": "subnet-029733216631d6f42"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082ca4538c16da39d",
            "route_table_id": "rtb-05fb06c9817287754",
            "subnet_id": "subnet-034e75251ecfce123"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04cd4c4c5f4137730",
            "route_table_id": "rtb-059e522801116d074",
            "subnet_id": "subnet-00d0c7ac9612a16ed"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-pvt-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cbdd5c0997e1144",
            "route_table_id": "rtb-008218624a7ebabe7",
            "subnet_id": "subnet-0e5779bd06c27de85"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecbcf7fb3c1e401e",
            "route_table_id": "rtb-0b2446c50ce217387",
            "subnet_id": "subnet-0f3afcf72f0bb368f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-route",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4e64afd26e92b62",
            "route_table_id": "rtb-0b2446c50ce217387",
            "subnet_id": "subnet-0214623b70cc0cb82"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:security-group/sg-0cde92c7f9ac2d0ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cde92c7f9ac2d0ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-2023052409562543160000000c",
            "name_prefix": "terraform-",
            "owner_id": "735117202941",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:security-group/sg-09b620f85a8a8890e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b620f85a8a8890e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230524093931248700000005",
            "name_prefix": "terraform-",
            "owner_id": "735117202941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main-sg"
            },
            "tags_all": {
              "Name": "main-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": -1,
            "id": "sgrule-2838838025",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-0cde92c7f9ac2d0ab",
            "security_group_rule_id": "sgr-0824155369225ece7",
            "self": false,
            "source_security_group_id": "sg-09b620f85a8a8890e",
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route.vpc_dbvpc_to_vpc_mainvpc",
            "aws_security_group.db-sg",
            "aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-032bc31cefc6038c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032bc31cefc6038c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pub-subnet-1"
            },
            "tags_all": {
              "Name": "db-pub-subnet-1"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0dc9172f386884e2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc9172f386884e2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pub-subnet-2"
            },
            "tags_all": {
              "Name": "db-pub-subnet-2"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-029733216631d6f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029733216631d6f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-1"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-1"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-034e75251ecfce123",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "20.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034e75251ecfce123",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-2"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-2"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-00d0c7ac9612a16ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d0c7ac9612a16ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-3"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-3"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0e5779bd06c27de85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "20.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5779bd06c27de85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db-pvt-subnet-4"
            },
            "tags_all": {
              "Name": "db-pvt-subnet-4"
            },
            "vpc_id": "vpc-0e320dbe136afb2bc"
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0f3afcf72f0bb368f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3afcf72f0bb368f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1"
            },
            "tags_all": {
              "Name": "pub-subnet-1"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0214623b70cc0cb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0214623b70cc0cb82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2"
            },
            "tags_all": {
              "Name": "pub-subnet-2"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pvt-sub-1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0c14e10d4857f6d3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14e10d4857f6d3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-1"
            },
            "tags_all": {
              "Name": "pvt-subnet-1"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pub-sub-1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-0cc4074c17769392a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc4074c17769392a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-2"
            },
            "tags_all": {
              "Name": "pvt-subnet-2"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-074355482a2f91bda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074355482a2f91bda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-3"
            },
            "tags_all": {
              "Name": "pvt-subnet-3"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt-sub-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:subnet/subnet-060d91b21de2bb433",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d91b21de2bb433",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "735117202941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pvt-subnet-4"
            },
            "tags_all": {
              "Name": "pvt-subnet-4"
            },
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dbvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:vpc/vpc-0e320dbe136afb2bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-09cf1cef04640d77b",
            "default_route_table_id": "rtb-0c13e21db901ebcb0",
            "default_security_group_id": "sg-0373a75538ad703e4",
            "dhcp_options_id": "dopt-0423809a7f06bcc72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e320dbe136afb2bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c13e21db901ebcb0",
            "owner_id": "735117202941",
            "tags": {
              "Name": "dbvpc"
            },
            "tags_all": {
              "Name": "dbvpc"
            }
          },
          "dependencies": [
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_route_table.pub-route",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.sg",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:735117202941:vpc/vpc-0b142d9b6f8c97e1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0197cf7c89e1f3a33",
            "default_route_table_id": "rtb-09a17f7d4d42ca941",
            "default_security_group_id": "sg-0b087b4b827f84fa4",
            "dhcp_options_id": "dopt-0423809a7f06bcc72",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b142d9b6f8c97e1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a17f7d4d42ca941",
            "owner_id": "735117202941",
            "tags": {
              "Name": "mainvpc"
            },
            "tags_all": {
              "Name": "mainvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0ce29ee86447310d6",
            "peer_owner_id": "735117202941",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0e320dbe136afb2bc",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b142d9b6f8c97e1a"
          },
          "dependencies": [
            "aws_eip.db-elastic-1",
            "aws_eip.db-elastic-2",
            "aws_eks_cluster.kubernetes-eks",
            "aws_eks_node_group.worker-node-group-1",
            "aws_iam_role.eks-iam-role-2",
            "aws_iam_role.workernodes-2",
            "aws_iam_role_policy_attachment.AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.AmazonEKS_CNI_Policy",
            "aws_internet_gateway.db-igw",
            "aws_internet_gateway.igw",
            "aws_key_pair.main_key_pair",
            "aws_nat_gateway.db-nat-1",
            "aws_nat_gateway.db-nat-2",
            "aws_route_table.db-pub-route",
            "aws_route_table.db-pvt-route-1",
            "aws_route_table.db-pvt-route-2",
            "aws_route_table.db-pvt-route-3",
            "aws_route_table.db-pvt-route-4",
            "aws_route_table.pub-route",
            "aws_route_table_association.db-pub-1",
            "aws_route_table_association.db-pub-2",
            "aws_route_table_association.db-pvt-1",
            "aws_route_table_association.db-pvt-2",
            "aws_route_table_association.db-pvt-3",
            "aws_route_table_association.db-pvt-4",
            "aws_route_table_association.pub-1",
            "aws_route_table_association.pub-2",
            "aws_security_group.db-sg",
            "aws_security_group.sg",
            "aws_subnet.db-pub-sub-1",
            "aws_subnet.db-pub-sub-2",
            "aws_subnet.db-pvt-sub-1",
            "aws_subnet.db-pvt-sub-2",
            "aws_subnet.db-pvt-sub-3",
            "aws_subnet.db-pvt-sub-4",
            "aws_subnet.pub-sub-1",
            "aws_subnet.pub-sub-2",
            "aws_subnet.pvt-sub-1",
            "aws_subnet.pvt-sub-2",
            "aws_subnet.pvt-sub-3",
            "aws_subnet.pvt-sub-4",
            "aws_vpc.dbvpc",
            "aws_vpc.mainvpc",
            "null_resource.copy",
            "null_resource.install_kubectl",
            "tls_private_key.rsa"
          ]
        }
      ]
    }
  ]
}